UI Changes local.

--- a/ui/index.html
+++ b/ui/index.html
@@ -11,6 +11,7 @@
         <div class="center text-big bold">
             Hi! Wassup!!!!.
         </div>
+		<h2 class="center text-big bold">IMAD!!!</h2>
         <script type="text/javascript" src="/ui/main.js">
         </script>
     </body>
