[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -4,14 +4,18 @@
         <link href="/ui/style.css" rel="stylesheet" />
     </head>
     <body>
-        <div class="center">
-            <img src="/ui/madi.png" class="img-medium"/>
-        </div>
-        <br>
-        <div class="center text-big bold">
-            Hi! Wassup!!!!.
-        </div>
-		<h2 class="center text-big bold">IMAD!!!</h2>
+        <div class="container">
+            <div class="center">
+                <img src="https://s-media-cache-ak0.pinimg.com/736x/61/98/75/61987520d52d91380d0191059dabd4cc--stains-tomura.jpg" class="img-medium"/>
+            </div>
+            <hr/>
+            <h2>The world has lost the sense of Justice!!!</h2>
+            <br>
+            <div class="center text-big bold">
+                Hi! Wassup!!!!.
+            </div>
+            <h2 class="center text-big bold">IMAD!!!</h2>
+		</div>
         <script type="text/javascript" src="/ui/main.js">
         </script>
     </body>
