--- a/ui/index.html
+++ b/ui/index.html
@@ -9,12 +9,8 @@
                 <img src="https://s-media-cache-ak0.pinimg.com/736x/61/98/75/61987520d52d91380d0191059dabd4cc--stains-tomura.jpg" class="img-medium"/>
             </div>
             <hr/>
-            <h2>The world has lost the sense of Justice!!!</h2>
+            <h2 class="text-big">The world has lost the sense of Justice!!!</h2>
             <br>
-            <div class="center text-big bold">
-                Hi! Wassup!!!!.
-            </div>
-            <h2 class="center text-big bold">IMAD!!!</h2>
 		</div>
         <script type="text/javascript" src="/ui/main.js">
         </script>
