[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -6,7 +6,7 @@
     <body>
         <div class="container">
             <div class="center">
-                <img src="https://s-media-cache-ak0.pinimg.com/736x/61/98/75/61987520d52d91380d0191059dabd4cc--stains-tomura.jpg" class="img-medium"/>
+                <img src="https://s-media-cache-ak0.pinimg.com/736x/61/98/75/61987520d52d91380d0191059dabd4cc--stains-tomura.jpg" class="img-large"/>
             </div>
             <hr/>
             <h2 class="text-big">The world has lost the sense of Justice!!!</h2>
