--- a/ui/index.html
+++ b/ui/index.html
@@ -11,7 +11,7 @@
             <hr/>
             <h2 class="text-big">The world has lost the sense of Justice!!!</h2>
             <br>
-            I <button>Trigger</button> have been triggered <span id="counter-id">0 times</span>
+            I <button id="button">Trigger</button> have been triggered <span id="counter-id">0 times</span>
 		</div>
         <script type="text/javascript" src="/ui/main.js">
         </script>
