--- a/ui/index.html
+++ b/ui/index.html
@@ -2,6 +2,7 @@
 <html>
     <head>
         <link href="/ui/style.css" rel="stylesheet" />
+        <script src="jquery-3.2.1.min.js"></script>
     </head>
     <body>
         <div class="container">
