[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -11,7 +11,9 @@
             <hr/>
             <h2 class="text-big">The world has lost the sense of Justice!!!</h2>
             <br>
+            <div class="text-big">
             I <button id="button">Trigger</button> have been triggered <span id="counter-id">0</span> times
+            </div>
 		</div>
         <script type="text/javascript" src="/ui/main.js">
         </script>
